--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">	
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_448926_au9yzc9zmgvf5hfr.css">
+    <meta name="full-screen" content="yes">
+    <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_448926_ibdzas13w8psnhfr.css"> -->
+    <script src="http://at.alicdn.com/t/font_448926_tehuipz6kkzf47vi.js"></script>
     <title>mt</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
